...
import Shared

@Observable
final class BookmarkDetailsViewModel {
    private let args: BookmarkDetailsViewModelArgs
    private let observeBookmark: ObserveBookmark
    private let bookmarkFlight: BookmarkFlight
    private let unBookmarkFlight: UnBookmarkFlight
    private let mapper: DetailsUIMapper
    
    private var _uiState: TypedUIState<DetailsUIModel>
    var uiState: TypedUIState<DetailsUIModel> {
        get { return _uiState }
...
